--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             android:name="com.example.bookshelf.ui.activities.BookListActivity"
             android:exported="false" />
         <activity
+            android:name="com.example.bookshelf.ui.activities.BookDetailActivity"
+            android:exported="false" />
+        <activity
             android:name="com.example.bookshelf.ui.activities.LoginActivity"
             android:exported="false" />
         <activity
